@@ -41,6 +41,10 @@ LanguageTool Change Log
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
 
+-Embedded server:
+    -XML escaping has been fixed, this could cause invalid XML documents
+     to be returned
+
 -Rule syntax:
     -A rule may now have a single example sentence as long as it has a 'correction'
      attribute - this can save some redundancy if the only correct sentence is the
